--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
               with: 
                  fetch-depth: 0
             - name: Install dependencies
-              run: npm run install --force
+              run: npm install --force
             - name: Initialize Git user
               run: | 
                   git config --global user.email "raneljohnt@gmail.com"
