--- a/package.json
+++ b/package.json
@@ -11,32 +11,52 @@
     "release": "release-it"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
+    "@aws-sdk/client-s3": "^3.709.0",
+    "@aws-sdk/s3-presigned-post": "^3.709.0",
     "@emailjs/browser": "^4.4.1",
+    "@prisma/client": "^6.0.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.3",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tanstack/react-table": "^8.20.5",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "formik": "^2.4.6",
+    "lodash.chunk": "^4.2.0",
     "lucide-react": "^0.462.0",
     "motion": "^12.0.0-alpha.2",
+    "nanoid": "^5.0.9",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
+    "react-markdown": "^8.0.6",
+    "recharts": "^2.14.1",
     "sonner": "^1.7.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "^9.0.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
+    "@types/lodash.chunk": "^4.2.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -44,6 +64,7 @@
     "eslint-config-next": "15.0.3",
     "lottie-react": "^2.4.0",
     "postcss": "^8",
+    "prisma": "^6.0.1",
     "release-it": "^17.10.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
