--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "mobile": "next dev -H 0.0.0.0 -p 3000",
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build && prisma generate",
     "start": "next start",
     "lint": "next lint",
     "release": "release-it"
