--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-table": "^8.20.5",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -50,11 +50,12 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tree-cli": "^0.6.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "^9.0.3",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
     "@types/lodash.chunk": "^4.2.9",
     "@types/node": "^20",
