--- a/.release-it.json
+++ b/.release-it.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://unpkg.com/release-it/schema/release-it.json",
   "git": {
-    "requireBranch": "main",
+    "requireBranch": "staging",
     "commitMessage": "chore: release v${version}",
     "tagName": "release/v${version}",
     "requireCleanWorkingDir": false
