--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,15 +13,19 @@ jobs:
               uses: actions/checkout@v4
               with: 
                  fetch-depth: 0
-            - name: Install dependencies
-              run: npm install --force
-            - name: Initialize Git user
-              run: | 
-                  git config --global user.email "raneljohnt@gmail.com"
-                  git config --global user.name "Release Workflow"
-            - name: Run release
-              run: npm run release
-              env: 
-                GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
-                
-            
+                 
+            - name: Conventional Change Log Action
+              id: changelog
+              uses: TriPSs/conventional-changelog-action@v5      
+              with: 
+                github-token: ${{secrets.GH_TOKEN}}
+
+            - name: Create Release
+              uses: actions/create-release@v1
+              if: ${{ steps.changelog.outputs.skipped == 'true' }}
+              env:
+                GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+              with:
+                tag_name: ${{ steps.changelog.outputs.tag }}
+                release_name: ${{ steps.changelog.outputs.tag }}
+                body: ${{ steps.changelog.outputs.clean_changelog }}
